--- a/docs/tutorials/long-range-entanglement.ipynb
+++ b/docs/tutorials/long-range-entanglement.ipynb
@@ -257,11 +257,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Level of optimizations the transpiler uses: There are 4 optimization levels ranging from 0 to 3,\n",
+    "# Level of optimizations the transpiler uses: There are four optimization levels ranging from 0 to 3,\n",
     "# where higher optimization levels take more time and computational effort but may yield a more\n",
     "# optimal circuit. level 0 does no explicit optimization, it will just try to make a circuit\n",
     "# runnable by transforming it to match a topology and basis gate set, if necessary.\n",
-    "# Level 1, 2 and 3 do light, medium and heavy optimization, using a combination of passes, and by\n",
+    "# Levels 1, 2, and 3 do light, medium, and heavy optimization, using a combination of passes, and by\n",
     "# configuring the passes to search for better solutions.\n",
     "OPTIMIZATION_LEVEL = 0\n",
     "\n",
