--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -126,88 +126,52 @@ Wondering what has changed? Read the [changelog](https://github.com/Qiskit/qiski
 
 
 <span id="latest-qiskit-runtime"></span>
-## Qiskit Runtime client 0.40.0
+## Qiskit Runtime client 0.41.0
 
-**28 May 2025**
+**6 August 2025**
 
-### New features
+### Prelude
 
-*   The following changes were made to support the upcoming [IBM Quantum platform migration](/docs/migration-guides/classic-iqp-to-cloud-iqp):
+The qiskit-ibm-runtime `v0.41.0` release focuses on the removal of IBM Quantum Platform Classic and improving the user experience for the new IBM Quantum Platform. Among new features, improvements, and minor bug fixes, the release highlights are:
 
-    *   A new channel type, `ibm_quantum_platform`, has been introduced for service initialization (`QiskitRuntimeService()`). It joins the existing `ibm_quantum` (now deprecated) and `ibm_cloud` channels. By **default**, `ibm_quantum_platform` is selected when no channel is specified. This new channel connects to the new IBM Quantum Platform API and is intended to replace `ibm_cloud`. In the meantime, the `ibm_cloud` channel will redirect to the new API, but its continued use is discouraged.
+*   The `ibm_quantum` channel and IQP Classic are no longer supported.
+*   [`QiskitRuntimeService.least_busy()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") is significantly faster.
+*   [`QiskitRuntimeService.usage()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to return information regarding the current instance usage limit, consumption, and time remaining.
 
-    *   An `instance` value is **no longer required** for saving ([`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account")) or initializing (`QiskitRuntimeService()`) an account on the new platform (`ibm_quantum_platform`, and temporarily, `ibm_cloud` channels). If an instance is not passed in, all instances will be checked when a backend is retrieved, (`service.backend("backend_name")`). If an instance is passed into [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account"), or passed in during initialization, it will be used as the **default instance** when retrieving backends. The instance passed in at initialization will take **precedence** over the one saved in the account.
+### Upgrade Notes
 
-    *   Note that the IBM Cloud API Token (`token`) is required for saving ([`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account")) or initializing (`QiskitRuntimeService()`) an account on the new platform. It’s treated as the account identifier and will unlock the resources associated with the account the token was created in. A list of tokens per account can be found [here](https://cloud.ibm.com/iam/apikeys). Only one account per API token can be used. If you want to use multiple accounts, you must create multiple API tokens.
+*   Because of the sunset of IBM Quantum Platform Classic, the `ibm_quantum` channel is no longer supported from `qiskit-ibm-runtime`. Saved `ibm_quantum` channel accounts and data will not be accessible. Use the `ibm_quantum_platform` channel instead. See our [migration guide](/docs/migration-guides/classic-iqp-to-cloud-iqp) for more details. ([2289](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2289))
 
-    *   The [`QiskitRuntimeService.backend()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#backend "qiskit_ibm_runtime.QiskitRuntimeService.backend") and [`QiskitRuntimeService.backends()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#backends "qiskit_ibm_runtime.QiskitRuntimeService.backends") methods have been updated to accept an `instance` passed in explicitly when retrieving backends: `service.backend(name="...", instance="...")`.
+### New Features
 
-    *   New parameters, `region` and `plans_preference`, have been added to the [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") initializer and [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account") method. These can be used to **prioritize** certain instances on the new platform (`ibm_quantum_platform`, and temporarily, `ibm_cloud` channels) without explicitly providing the CRN. In more detail:
+*   A new parameter, `tags`, has been added to the [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") initializer and [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account") method. `tags` can be used to **filter** instances so only instances with the given tags are returned.
 
-        *   `region`: Sets a region preference. `us-east` or `eu-de`.
-        *   `plans_preference`: Is a list of account types, ordered by preference. An instance of the first type in the list will be prioritized.
+    Additionally, if no valid instances are returned when using the `tags`, `region`, or `plans_preference` filters, an error will now be raised at initialization. Make sure the names of the `tags` and `region` passed in match the instance `tags` or `region` exactly (case-insensitive). For `plans_preference`, as long as a matching plan name is passed in, instances with the matching plan name will be prioritized. ([2277](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2277))
 
-        For example, if `region` is saved as `us-east`, only instances from `us-east` will be checked. If `plans_preference` is set, the instances will be prioritized in the order given, so `['Open', 'Premium']` would prioritize all Open Plan instances, then all Premium Plan instances, and then the rest. Note that the plan names in `plans_preference` must exactly match the API names (case insensitive).
+*   Support for running `qiskit-ibm-runtime` with Python 3.9 has been deprecated and will be removed in a future release.
 
-    *   The `instance` input parameter of [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") has been extended to accept new input types for the `ibm_quantum_platform` and `ibm_cloud` channels. In addition to the IBM Cloud Resource Name (CRN), the instance **name** can now be passed in as the instance value.
+    Additionally, `qiskit-ibm-runtime` now officially supports Python 3.13. ([2314](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2314))
 
-    *   The [`instances()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#instances "qiskit_ibm_runtime.QiskitRuntimeService.instances") method has been extended to show all available instances associated to an account for the `ibm_quantum_platform` and `ibm_cloud` channels, in addition to the already enabled `ibm_quantum` channel.
+*   There is a new method, [`QiskitRuntimeService.active_instance()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#active_instance "qiskit_ibm_runtime.QiskitRuntimeService.active_instance"), which returns the IBM Cloud CRN of the current active instance.
 
-        The following code snippets show the new usage patterns enabled by the changes described above ([2239](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2239)):
+    The [`QiskitRuntimeService.jobs()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs "qiskit_ibm_runtime.QiskitRuntimeService.jobs") method has been updated to properly accept the `instance` parameter, which can be used to filter jobs. ([2325](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2325))
 
-        ```python
-        # save account
-        service = QiskitRuntimeService.save_account(
-          # No channel needs to be specified, ibm_quantum_platform is the default
-          token=token,
-          region="eu-de", # Optional
-          plans_preference=['Open',...], #Optional
-          set_as_default=True  #Optional
-          )
+*   [`QiskitRuntimeService.usage()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to include a `usage_remaining_seconds` field. This field includes the difference between the reported `usage_limit_seconds` or `usage_allocation_seconds` (depending on how the instance is configured) and `usage_consumed_seconds`. Learn more about instance allocation limits [in the documentation](/docs/guides/allocation-limits). ([2329](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2329))
 
-        # initialize account
-        service = QiskitRuntimeService() # defaults to ibm_quantum_platform account
-        service.backend(name="...") # picks instance based on saved preferences
-        service.backend(name="...", instance="...") # can also explicity pass in an instance to use
-
-        # initialize account with instance
-        service = QiskitRuntimeService(instance = "...") # sets instance as default instance
-        service.backend(name="...") # only checks default instance, fails if the backend not in the instance
-        service.backend(name="...", instance="...") # can still explicity pass in a different instance
-
-        # OR
-
-        # save account with instance
-        service = QiskitRuntimeService.save_account(
-          # No channel needs to be specified, ibm_quantum_platform is the default
-          token=token,
-          instance="..." # This will be the default instance
-          region="us-east", # Optional
-          plans_preference=['Open',...], #Optional
-          set_as_default=True  #Optional
-          )
-
-        # initialize account
-        service = QiskitRuntimeService() # defaults to ibm_quantum_platform account
-        service.backend(name="...") # only checks saved default instance from save_account
-        service.backend(name="...", instance="...") # can also explicity pass in an instance which takes precedence
-
-        # initializing account with instance works the same way
-        service = QiskitRuntimeService(instance = "...") # sets instance as default instance, overrides instance from save_account
-        service.backend(name="...") # only checks default instance, fails if the backend not in the instance
-        service.backend(name="...", instance="...") # can still explicity pass in a different instance
-        ```
-
-*   The `private` option under `EnvironmentOptions` is now supported on the `ibm_cloud` and `ibm_quantum_platform` channels (new IBM Quantum Platform). When this option is set to `True`, the job will be returned without parameters, and results can only be retrieved once.
-
-    There is also a new `private()` property that returns whether or not a job is private. ([2263](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2263))
-
-### Bug fixes
-
-*   The call to [`defaults()`](/docs/api/qiskit-ibm-runtime/0.40/ibm-backend#defaults "qiskit_ibm_runtime.IBMBackend.defaults") in `target()` was removed because backend defaults are no longer used in the target generation. ([2261](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2261))
+*   The [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") has been updated to use a new API version. With the new version, the [`QiskitRuntimeService.least_busy()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") method has been updated to take advantage of the updated `BackendsResponseV2`, which makes it significantly faster. ([2323](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2323))
 
 
-- See the full [0.40.0 release notes.](/docs/api/qiskit-ibm-runtime/release-notes#0400-2025-05-28)
+### Bug Fixes
+
+*   Fixed a bug in `BasePrimitive` where primitives instantiated inside a [`Session`](/docs/api/qiskit-ibm-runtime/session "qiskit_ibm_runtime.Session") or [`Batch`](/docs/api/qiskit-ibm-runtime/batch "qiskit_ibm_runtime.Batch") context manager without the `mode` parameter would fetch the backend from the service (by name) instead of using the backend passed to the [`Session`](/docs/api/qiskit-ibm-runtime/session  "qiskit_ibm_runtime.Session") or [`Batch`](/docs/api/qiskit-ibm-runtime/batch  "qiskit_ibm_runtime.Batch"). This could cause issues when the [`Session`](/docs/api/qiskit-ibm-runtime/session  "qiskit_ibm_runtime.Session") or [`Batch`](/docs/api/qiskit-ibm-runtime/batch  "qiskit_ibm_runtime.Batch") backend was modified by users (for example, by removing a gate), because the primitives would instead fetch the unmodified backend object from the service. After the fix, the [`Session`](/docs/api/qiskit-ibm-runtime/session  "qiskit_ibm_runtime.Session") or [`Batch`](/docs/api/qiskit-ibm-runtime/batch  "qiskit_ibm_runtime.Batch") backend object is used directly. ([2282](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2282))
+*   Fixed an issue in [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") where property changes, such as modifications to `basis_gates`, persisted even after the backend object was renewed. ([2283](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2283))
+
+### Other Notes
+
+*   The deprecated [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") attributes, `max_shots` and `max_experiments`, have been removed and the `IBMBackend.max_circuits()` method now returns `None`. See the [job limits guide](/docs/guides/job-limits#job-limits) for details. ([2235](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2235))
+*   The deprecated [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") and `FakeBackendV2` `defaults()` methods have been removed. They were deprecated in the v0.38.0 release. Pulse defaults have also been removed from all fake backends. ([2238](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2238))
+
+- See the full [0.41.0 release notes.](/docs/api/qiskit-ibm-runtime/release-notes#0410-2025-07-24)
 
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
