--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -1724,34 +1724,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "a8fe6724-f67d-41b9-a548-08428cf8faf0",
+   "execution_count": null,
+   "id": "9e3c0b51-588e-4807-8802-e377b3e89846",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_17673/2622998896.py:23: DeprecationWarning: The service parameter is deprecated as of qiskit-ibm-runtime 0.26.0 and will be removed no sooner than 3 months after the release date. The service can be extracted from the backend object so it is no longer necessary.\n",
-      "  estimator = Estimator(mode=Session(service, backend=backend), options={\"resilience_level\": 1})\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0, batch: 0\n",
-      "Iter: 0, loss: 1.1331960251401394\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This was run on ibm_nazca on 10-4-24, and took 7 min.\n",
     "\n",
-    "from qiskit_ibm_runtime import (\n",
-    "    EstimatorV2 as Estimator,\n",
-    "    Session,\n",
-    ")\n",
+    "from qiskit_ibm_runtime import EstimatorV2 as Estimator, Session\n",
     "\n",
     "batch_size = 7\n",
     "num_epochs = 1\n",
@@ -1844,10 +1824,10 @@
     "    ]\n",
     ")\n",
     "\n",
-    "with Session(backend=backend):\n",
-    "    estimator = Estimator(\n",
-    "        mode=Session(service, backend=backend), options={\"resilience_level\": 1}\n",
-    "    )\n",
+    "# Running in a session avoids repeated queuing. This is available to Premium Plan, Flex Plan, and On-Prem (IBM Quantum Platform API) Plan users.\n",
+    "\n",
+    "with Session(backend=backend) as session:\n",
+    "    estimator = Estimator(mode=session, options={\"resilience_level\": 1})\n",
     "\n",
     "    for epoch in range(num_epochs):\n",
     "        for i in range((num_samples - 1) // batch_size + 1):\n",
@@ -1866,7 +1846,36 @@
     "                method=\"COBYLA\",\n",
     "                options={\"maxiter\": 20},\n",
     "            )\n",
-    "            weight_params = res[\"x\"]"
+    "            weight_params = res[\"x\"]\n",
+    "session.close()\n",
+    "\n",
+    "# Open users can carry out the same calculation using a batch, but repeated queuing is possible.\n",
+    "# from qiskit_ibm_runtime import Batch\n",
+    "\n",
+    "# with Batch(backend=backend) as batch:\n",
+    "#    estimator = Estimator(\n",
+    "#        mode=batch, options={\"resilience_level\": 1}\n",
+    "#    )\n",
+    "#\n",
+    "#    for epoch in range(num_epochs):\n",
+    "#        for i in range((num_samples - 1) // batch_size + 1):\n",
+    "#            print(f\"Epoch: {epoch}, batch: {i}\")\n",
+    "#            start_i = i * batch_size\n",
+    "#            end_i = start_i + batch_size\n",
+    "#            train_images_batch = np.array(train_images[start_i:end_i])\n",
+    "#            train_labels_batch = np.array(train_labels[start_i:end_i])\n",
+    "#            input_params = train_images_batch\n",
+    "#            target = train_labels_batch\n",
+    "#            iter = 0\n",
+    "#            # We can increase maxiter to do a full optimization.\n",
+    "#            res = minimize(\n",
+    "#                mse_loss_weights,\n",
+    "#                weight_params,\n",
+    "#                method=\"COBYLA\",\n",
+    "#                options={\"maxiter\": 20},\n",
+    "#            )\n",
+    "#            weight_params = res[\"x\"]\n",
+    "# batch.close()"
    ]
   },
   {
