--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -16,13 +16,15 @@
     "# The Deutsch-Jozsa algorithm\n",
     "\n",
     "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v1.3 or newer\n",
-    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
-    "- `qiskit-aer` v15.0 or newer\n",
+    "- `qiskit` v2.1.0 or newer\n",
+    "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
+    "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud&reg; account](/docs/guides/cloud-setup) guide."
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
+    "\n",
+    "This module was tested and used four seconds of QPU time. This is an estimate only. Your actual usage may vary."
    ]
   },
   {
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ccc7364-7b6b-45f5-94b8-b1274006ee2f",
    "metadata": {},
    "outputs": [
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29468e63-ce36-4eb7-95b4-176788a97e54",
    "metadata": {},
    "outputs": [],
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e67183b-42b9-44c2-bd4b-b5e2d192a796",
    "metadata": {},
    "outputs": [
@@ -758,7 +760,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'111': 1}\n",
+      "{'110': 1}\n",
       "balanced\n"
      ]
     }
@@ -904,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "45449a26-0bd0-4244-87be-3309937955b9",
    "metadata": {},
    "outputs": [
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "0cf6f2bc-3b5e-46d2-ab82-1a190e77c42b",
    "metadata": {},
    "outputs": [
@@ -948,7 +950,7 @@
        "<Image src=\"/learning/images/modules/computer-science/deutsch-jozsa/extracted-outputs/0cf6f2bc-3b5e-46d2-ab82-1a190e77c42b-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "5d225a6e-e3d0-4c08-8aeb-f03337bfffc4",
    "metadata": {},
    "outputs": [],
@@ -988,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "8fef6a65-227a-4f27-af3e-348513e1cd33",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "ec576787-d9ba-4406-b799-9c0de21a8088",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1017,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1000': 1}\n"
+      "{'0000': 1}\n"
      ]
     }
    ],
