--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -16,13 +16,15 @@
     "# Quantum key distribution\n",
     "\n",
     "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v1.3 or newer\n",
-    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
-    "- `qiskit-aer` v15.0 or newer\n",
+    "- `qiskit` v2.1.0 or newer\n",
+    "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
+    "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud&reg; account](/docs/guides/cloud-setup) guide."
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
+    "\n",
+    "This module was tested and used 5 seconds of QPU time. This is an estimate only. Your actual usage may vary."
    ]
   },
   {
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23a8a5c3-8f59-4130-8f2c-8b2bd50ee698",
    "metadata": {},
    "outputs": [],
@@ -454,15 +456,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice's bits are  [0. 1. 0. 1. 1. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 1. 1. 0. 1.]\n",
-      "Alice's bases are  [0. 0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 0. 0. 0. 0. 0. 1. 0.]\n",
-      "Bob's bases are  [1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0.]\n"
+      "Alice's bits are  [1. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 1. 0. 0. 0.]\n",
+      "Alice's bases are  [0. 0. 0. 1. 1. 0. 0. 0. 0. 1. 1. 1. 1. 1. 0. 1. 1. 0. 1. 0.]\n",
+      "Bob's bases are  [0. 1. 1. 0. 1. 0. 1. 1. 0. 0. 1. 1. 0. 0. 1. 0. 1. 1. 0. 0.]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/learning/images/modules/computer-science/quantum-key-distribution/extracted-outputs/0ee6b115-adb5-4ea3-93f5-7cb3304fab4d-1.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/learning/images/modules/computer-science/quantum-key-distribution/extracted-outputs/2b538952-9e01-43a0-a1e6-a798683f93f0-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "execution_count": 2,
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8dd83eea-3fae-4ec8-b2d9-22128c6abb93",
    "metadata": {},
    "outputs": [
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9032820e-bf2c-4e3c-b61c-d83779121fa3",
    "metadata": {},
    "outputs": [],
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c21e3999-dedf-4577-b675-0ee57cef41a9",
    "metadata": {},
    "outputs": [],
@@ -617,7 +619,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1]\n"
+      "[1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a8dddc11-d4b9-4cf9-8944-be111f68c070",
    "metadata": {},
    "outputs": [
@@ -656,8 +658,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1]\n",
-      "[0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1]\n",
+      "[1, 0, 1, 0, 0, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 0, 0, 1, 0]\n",
       "fidelity =  1.0\n",
       "loss =  0.0\n"
      ]
@@ -721,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bfe1e1a9-c723-4bda-81f6-e5e3caf0efbf",
    "metadata": {},
    "outputs": [],
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e20dd109-d1a2-4bec-86df-4b70c5b76cc4",
    "metadata": {},
    "outputs": [],
@@ -784,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cfb2f614-8730-47ee-85c7-686b638e0def",
    "metadata": {},
    "outputs": [],
@@ -813,7 +815,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1]\n"
+      "[0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1]\n"
      ]
     }
    ],
@@ -839,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7feadfe3-c63e-41e0-9d51-a1b98b5ce67d",
    "metadata": {},
    "outputs": [
@@ -847,7 +849,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0]\n"
+      "[0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1]\n"
      ]
     }
    ],
@@ -929,10 +931,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 0, 0, 1, 0]\n",
-      "[1, 0, 1, 1, 1, 1, 0, 1, 0]\n",
-      "fidelity =  0.7777777777777778\n",
-      "loss =  0.2222222222222222\n"
+      "[1, 1, 0, 0, 0, 1, 1]\n",
+      "[1, 1, 0, 0, 0, 0, 1]\n",
+      "fidelity =  0.8571428571428571\n",
+      "loss =  0.1428571428571429\n"
      ]
     }
    ],
@@ -957,7 +959,7 @@
    "id": "5783dd96-2fc3-4f9f-a822-51b7782121f5",
    "metadata": {},
    "source": [
-    "Previously, there was a perfect match between the bits in Alice's and Bob's keys. Now, from Eve's interference, we see the bits of Alice and Bob are different in 15% of cases that should match due to Alice and Bob selecting the same bases. This should be easy for Alice and Bob to detect. However, relying on a percentage of errors like this does mean that there is a limit to how much noise we can tolerate in the quantum channel.\n",
+    "Previously, there was a perfect match between the bits in Alice's and Bob's keys. Now, from Eve's interference, we see the bits of Alice and Bob are different in 14% of cases that should match due to Alice and Bob selecting the same bases. This should be easy for Alice and Bob to detect. However, relying on a percentage of errors like this does mean that there is a limit to how much noise we can tolerate in the quantum channel.\n",
     "\n",
     "## Experiment 3: Compare QKD with and without eavesdropping on a real quantum computer\n",
     "\n",
@@ -966,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2697eace-2faf-49cc-99f2-d8d7bda28588",
    "metadata": {},
    "outputs": [
@@ -974,10 +976,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice's bits =  [1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0]\n",
-      "Bob's bits =  [1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0]\n",
-      "fidelity =  1.0\n",
-      "loss =  0.0\n"
+      "Alice's bits =  [0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1]\n",
+      "Bob's bits =  [0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1]\n",
+      "fidelity =  0.9682539682539683\n",
+      "loss =  0.031746031746031744\n"
      ]
     }
    ],
@@ -1075,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b311cf3a-ccea-43fe-8bcd-a054296e113e",
    "metadata": {},
    "outputs": [
@@ -1083,10 +1085,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice's bits =  [0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0]\n",
-      "Bob's bits =  [0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0]\n",
-      "fidelity =  0.7538461538461538\n",
-      "loss =  0.24615384615384617\n"
+      "Alice's bits =  [1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1]\n",
+      "Bob's bits =  [1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n",
+      "fidelity =  0.7619047619047619\n",
+      "loss =  0.23809523809523814\n"
      ]
     }
    ],
