--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -236,7 +236,7 @@
  "metadata": {
   "description": "Learn about mapping considerations for nature simulation problems.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
